<resources>
    <string name="app_name">InventoryApp</string>
    <string name="category_item">Item</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_supplier">Supplier</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price</string>
    <string name="hint_item_price">Price</string>
    <string name="category_image">Image</string>
    <string name="category_unknown">Category Unknown</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="hint_quantity">Quantity</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all items</string>
    <string name="action_save">Save item</string>
    <string name="action_delete">Delete item</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="pet_not_deleted">ERROR : Item not deleted</string>
    <string name="pet_deleted">Item successfully deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
</resources>
